--- a/src/main/resources/messages/JsonExtBundle.properties
+++ b/src/main/resources/messages/JsonExtBundle.properties
@@ -70,15 +70,19 @@ json.schema.ref.cannot.resolve.id=Cannot resolve id ''{0}''
 json.schema.ref.no.array.element=Array doesn''t contain element with index ''{0}''
 json.schema.ref.no.property=Property ''{0}'' not found
 
-settings.display.name.json=JSON
+settings.display.name.json=JSON Ext
 
 settings.json.schema.add.mapping=Add mapping
 settings.json.schema.edit.mapping=Edit mapping
 settings.json.schema.remove.mapping=Remove mapping
 
+settings.feature.match_string=Match string go to JSON's property key declaration
+settings.feature.match_string_slot_curly_brace=Matches pairs of curly brace slot in a string and go to JSON's property key declaration
+settings.feature.Highlight_key_of__pairs_of_percent_signs=Highlight pairs of percent signs in JSON's property
+
 json.intention.category.name=JSON
 json.intention.sort.properties=Sort properties alphabetically
-configurable.JsonSmartKeysConfigurable.display.name=JSON
+configurable.JsonSmartKeysConfigurable.display.name=JSON Ext
 configurable.JsonSchemaMappingsConfigurable.display.name=JSON Schema Mappings
 configurable.JsonSchemaCatalogConfigurable.display.name=Remote JSON Schemas
 settings.smart.keys.insert.missing.comma.on.enter=Insert missing comma on Enter
